Updated style for input element

--- a/sourceFiles/index.html
+++ b/sourceFiles/index.html
@@ -1026,7 +1026,7 @@ $(document).ready(function(){
      <div id="info">Null State</div>
      <div id="printinfo">Print</div>
      <div id="cmds">Commands</div>
-	 <input style="visibility:hidden;" type="file" id="objBrowseInput"/>
+	 <input style="display:none;" type="file" id="objBrowseInput"/>
      <div class="leftPanel">
           <div id="log" ></div>
      </div>
