--- a/sourceFiles/index.html
+++ b/sourceFiles/index.html
@@ -84,69 +84,6 @@ function init() {
      var light = new THREE.PointLight( 0xffffff, 1, 20 );
      light.position.set( 0, 0, 2 );
      scene.add(light);
-     loader.load(
-	     // resource URL
-	     'obj/face.obj',
-	     // called when resource is loaded
-	     function ( obje ) {
-	          var material = new THREE.MeshBasicMaterial( {color: 0x00ff00, wireframe: true} );
-               obje.traverse( function ( child ) {
-      			if ( child.isMesh ){
-					child.material = material;
-	      	     }
-		     } );
-               //scene.add( obje );
-	          var bb = new THREE.Box3()
-               bb.setFromObject(obje);
-               bb.getCenter(control.target);
-	          var cubeGeo = new THREE.Geometry().fromBufferGeometry( obje.children[0].geometry );
-               cubeGeo.mergeVertices();  //removes duplicate vertices
-               //cubeGeo.center();
-	          //var cubeGeo =  obje.children[0].geometry;//new THREE.Geometry().fromBufferGeometry(obje.children[0].geometry);
-               /*Start of Spheres*/
-               //cubeGeo = new THREE.SphereGeometry(1,7,7);
-               sphereGeo = cubeGeo;
-               var cubeMaterial = new THREE.MeshBasicMaterial(  );
-               var cubeMesh = new THREE.Mesh(sphereGeo, cubeMaterial); //obje.children[0].materials);
-               console.log("verts: " + cubeMesh.geometry.vertices.length);
-               var eGeometry = new THREE.EdgesGeometry( cubeMesh.geometry );
-               var eMaterial = new THREE.LineBasicMaterial( { color: 0x00ff00, linewidth: 1 } );
-               var edges = new THREE.LineSegments( eGeometry, eMaterial );
-               //cubeMesh.add( edges );
-               //scene.add(cubeMesh);
-               //add spheres to mesh, push to objects[], add to scene
-               sphereMesh(cubeMesh, objects, scene); //Custom sphereMesh function
-               console.log("objects size: "+ objects.length);
-               //console.log( "Geometry: "+cubeMesh.geometry.isGeometry );
-	          //var ageometry = new THREE.Geometry().fromBufferGeometry( cubeMesh.geometry );
-               var edgelist = getEdges(cubeMesh.geometry);//cubeMesh.geometry
-               //console.log("edgelist: "+edgelist.length);
-               for(var i=0; i<cubeMesh.geometry.vertices.length; i++) {
-                    eu = edgelist[i].filter(onlyUnique);
-                    //console.log("edgelist: "+i+": "+eu);
-                    for(var j=0; j<eu.length; j++) {
-                         //console.log("e: "+i+","+eu[j]);
-                         var cyMaterial = new THREE.MeshBasicMaterial({color: 0xffffff});
-                         var cylinder = cylinderMesh(cubeGeo.vertices[i], cubeGeo.vertices[eu[j]], cyMaterial);
-                         scene.add(cylinder);
-                         objects.push(cylinder);
-                         objects[cylinder.uuid] = cylinder;
-                    }
-               }
-               console.log("objects size: "+ objects.length);
-               console.log("edges: " + (objects.length - cubeMesh.geometry.vertices.length));
-               //add spheres to mesh, push to objects[], add to scene
-               //sphereMesh(cubeMesh, objects, scene); //Custom sphereMesh function
-	     },
-	     // called when loading is in progresses
-	     function ( xhr ) {
-		     console.log( ( xhr.loaded / xhr.total * 100 ) + '% loaded' );
-          },
-	     // called when loading has errors
-	     function ( error ) {
-		     console.log( 'An error happened' );
-	     }
-     );
      //console.log("objects size: "+ objects.length);
      //showLog();
      displayGUI(); //function call for gui
@@ -166,7 +103,7 @@ function init() {
 				}
 				//alert(filename);
 			}
-		  
+
 		  //return filename;
 		  loader.load(
 	     // resource URL
@@ -231,7 +168,7 @@ function init() {
 		     console.log( 'An error happened' );
 	     }
 		);
-		
+
 		});
      document.addEventListener( 'mousedown', onDocumentMouseDown );
      window.addEventListener( 'resize', onWindowResize, false );
@@ -293,45 +230,6 @@ function cylinderMesh(pointX, pointY, material) {
      edge.position.z = (pointY.z + pointX.z) / 2;
      return edge;
 }
-
-/*function onDocumentMouseDown( event ) {
-            //event.preventDefault();
-
-			mouse3D.x = ( event.clientX / window.innerWidth ) * 2 - 1;
-			mouse3D.y = -( event.clientY / window.innerHeight ) * 2 + 1;
-			raycaster.setFromCamera( mouse3D, camera );
-            var intersects = raycaster.intersectObjects( scene.children);
-
-            if ( intersects.length > 0 ) {
-                console.log("intersects.length: "+intersects.length);
-
-                //console.log("intersected objects position: "+intersects[ 0 ].object.uuid);
-
-				for ( var i = 0; i < intersects.length; i++ ) {
-				var uuidtemp = intersects[i].object.uuid;
-				//console.log("uuid: "+uuidtemp);
-
-				if (objects.hasOwnProperty(uuidtemp)){
-				    var objID = intersects[ i ].object.id;
-                    console.log("We got object: "+objID+" Random:"+Math.random());
-					//objects[intersects[ 0 ].object.uuid].material.color.setHex( Math.random() * 0xffffff );
-					//scene.updateMatrixWorld(true);
-					var pt = new THREE.Vector3();
-					pt.setFromMatrixPosition( intersects[ i ].object.matrixWorld );
-					console.log("position pt: x:"+pt.x+" y:"+pt.y+" z:"+pt.z);
-                    intersects[ i ].object.material.color.setHex( Math.random() * 0xffffff );
-
-					if(lastInputID != 0){
-						//$('#'+lastInputID).val(objID+','+$('#'+lastInputID).val());//$('#'+lastInputID).val()+","+i);
-						//var trimmed = $('#'+lastInputID).val().replace(/(^[,\s]+)|([,\s]+$)/g, '');
-						//$('#'+lastInputID).val(trimmed);
-					}
-				}
-                }
-                //intersects[ 0 ].object.material.color.setHex( Math.random() * 0xffffff );
-        }
-
-}*/
 
 /*Pushes the state, index, and color of a marked vertex into the
 markerArray which will be exported to file.*/
@@ -679,31 +577,17 @@ function onDocumentMouseDown( event ) {
 //Create gui and handle gui events
 function displayGUI(){
      var gui = new dat.GUI();
-     /*var jar;
 
-     var parameters = {
-         a: "NosePoints",
-         b: "Eyebrows",
-         c: false
-     }*/
      function printArrays(boolean){
+       document.getElementById("printinfo").innerHTML = "Nose: " + noseArray
+                                                   + "\nL Eyebrow: " + leyebrowArray
+                                                   + "\nR Eyebrow: " + reyebrowArray
+                                                   + "\nL Eye: " + leyeArray
+                                                   + "\nR Eye: " + reyeArray
+                                                   + "\nL Ear: " + learArray
+                                                   + "\nR Ear: " + rearArray
+                                                   + "\nChin: " + chinArray;
           if(boolean == true){
-               console.log("Nose: " + noseArray);
-               console.log("L Eyebrow: " + leyebrowArray);
-               console.log("R Eyebrow: " + reyebrowArray);
-               console.log("L Eye: " + leyeArray);
-               console.log("R Eye: " + reyeArray);
-               console.log("L Ear: " + learArray);
-               console.log("R Ear: " + rearArray);
-               console.log("Chin: " + chinArray);
-               document.getElementById("printinfo").innerHTML = "Nose: " + noseArray
-                                                           + "\nL Eyebrow: " + leyebrowArray
-                                                           + "\nR Eyebrow: " + reyebrowArray
-                                                           + "\nL Eye: " + leyeArray
-                                                           + "\nR Eye: " + reyeArray
-                                                           + "\nL Ear: " + learArray
-                                                           + "\nR Ear: " + rearArray
-                                                           + "\nChin: " + chinArray;
                document.getElementById("printinfo").style.display = "block";
           }
           else {
@@ -730,9 +614,9 @@ function displayGUI(){
           else {
                //document.getElementById("cmds").style.display = "none";
           }
-		  
 
-     }	 
+
+     }
      var str = "-";
      var controller = new function(){
           this.Nose = str;
@@ -770,7 +654,9 @@ function displayGUI(){
           };
           this.Print = false;
           this.Cmds = false;
-		  this.ObjBrowse = false;
+          this.ObjBrowse = function(){
+            document.getElementById("objBrowseInput").click();
+          };
      }();
      //Regex for "add" and "del"
      function matches(locController, stateVal, name){
@@ -838,9 +724,8 @@ function displayGUI(){
      methods.add(controller, 'Cmds', false).name('Show Commands').onChange(function(){
           showCmds(controller.Cmds);
      });
-	 methods.add(controller, 'ObjBrowse', false).name('Load Obj').onChange(function(){
-          ObjBrowse(controller.ObjBrowse);
-     });
+
+	   methods.add(controller, 'ObjBrowse').name('Load Obj');
      methods.add(controller, 'Save', false).name('Export Markers');
      methods.add(controller, 'Load', false).name('Import Markers');
      gui.open();
@@ -878,6 +763,17 @@ function showCoords(event) {
      alert(pos2.x+" "+pos2.y);
 }
 
+function printArraysLive(){
+		document.getElementById("printinfo").innerHTML = "Nose: " + noseArray
+                                                           + "\nL Eyebrow: " + leyebrowArray
+                                                           + "\nR Eyebrow: " + reyebrowArray
+                                                           + "\nL Eye: " + leyeArray
+                                                           + "\nR Eye: " + reyeArray
+                                                           + "\nL Ear: " + learArray
+                                                           + "\nR Ear: " + rearArray
+                                                           + "\nChin: " + chinArray;
+	 }
+
 function animate() {
      requestAnimationFrame( animate );
      update();
@@ -887,6 +783,7 @@ function animate() {
 
 function update() {
     control.update();
+    printArraysLive();
 }
 
 function render() {
