--- a/sourceFiles/index.html
+++ b/sourceFiles/index.html
@@ -84,9 +84,12 @@ function init() {
      var light = new THREE.PointLight( 0xffffff, 1, 20 );
      light.position.set( 0, 0, 2 );
      scene.add(light);
+	 //alert(window.location.href);
+	 var filenamex = window.location.href.split("?");
+	 if(filenamex.length == 1){filenamex[1]='face.obj';}
      loader.load(
 	     // resource URL
-	     'obj/face.obj',
+	     'obj/'+filenamex[1],
 	     // called when resource is loaded
 	     function ( obje ) {
 	          var material = new THREE.MeshBasicMaterial( {color: 0x00ff00, wireframe: true} );
@@ -153,9 +156,10 @@ function init() {
      //showCoords(event);
      //document.addEventListener("click", showCoords);
 	 		  selectElement = document.querySelector('#objBrowseInput');
-		  selectElement.addEventListener('change', (event) => {
+		    selectElement.addEventListener('change', (event) => {
 				//const result = document.querySelector('.result');
 				//result.textContent = `You like ${event.target.value}`;
+			//alert(document.getElementById("objBrowseInput").files[0].path);
 			var fullPath = document.getElementById('objBrowseInput').value;
 		    var filename;
 			if (fullPath) {
@@ -164,74 +168,16 @@ function init() {
 				if (filename.indexOf('\\') === 0 || filename.indexOf('/') === 0) {
 					filename = filename.substring(1);
 				}
-				//alert(filename);
+				//alert(fullPath);
 			}
 		  
-		  //return filename;
-		  loader.load(
-	     // resource URL
-	     'obj/'+filename,
-	     // called when resource is loaded
-	     function ( obje ) {
-	          var material = new THREE.MeshBasicMaterial( {color: 0x00ff00, wireframe: true} );
-               obje.traverse( function ( child ) {
-      			if ( child.isMesh ){
-					child.material = material;
-	      	     }
-		     } );
-               //scene.add( obje );
-	          var bb = new THREE.Box3()
-               bb.setFromObject(obje);
-               bb.getCenter(control.target);
-	          var cubeGeo = new THREE.Geometry().fromBufferGeometry( obje.children[0].geometry );
-               cubeGeo.mergeVertices();  //removes duplicate vertices
-               //cubeGeo.center();
-	          //var cubeGeo =  obje.children[0].geometry;//new THREE.Geometry().fromBufferGeometry(obje.children[0].geometry);
-               /*Start of Spheres*/
-               //cubeGeo = new THREE.SphereGeometry(1,7,7);
-               sphereGeo = cubeGeo;
-               var cubeMaterial = new THREE.MeshBasicMaterial(  );
-               var cubeMesh = new THREE.Mesh(sphereGeo, cubeMaterial); //obje.children[0].materials);
-               console.log("verts: " + cubeMesh.geometry.vertices.length);
-               var eGeometry = new THREE.EdgesGeometry( cubeMesh.geometry );
-               var eMaterial = new THREE.LineBasicMaterial( { color: 0x00ff00, linewidth: 1 } );
-               var edges = new THREE.LineSegments( eGeometry, eMaterial );
-               //cubeMesh.add( edges );
-               //scene.add(cubeMesh);
-               //add spheres to mesh, push to objects[], add to scene
-               sphereMesh(cubeMesh, objects, scene); //Custom sphereMesh function
-               console.log("objects size: "+ objects.length);
-               //console.log( "Geometry: "+cubeMesh.geometry.isGeometry );
-	          //var ageometry = new THREE.Geometry().fromBufferGeometry( cubeMesh.geometry );
-               var edgelist = getEdges(cubeMesh.geometry);//cubeMesh.geometry
-               //console.log("edgelist: "+edgelist.length);
-               for(var i=0; i<cubeMesh.geometry.vertices.length; i++) {
-                    eu = edgelist[i].filter(onlyUnique);
-                    //console.log("edgelist: "+i+": "+eu);
-                    for(var j=0; j<eu.length; j++) {
-                         //console.log("e: "+i+","+eu[j]);
-                         var cyMaterial = new THREE.MeshBasicMaterial({color: 0xffffff});
-                         var cylinder = cylinderMesh(cubeGeo.vertices[i], cubeGeo.vertices[eu[j]], cyMaterial);
-                         scene.add(cylinder);
-                         objects.push(cylinder);
-                         objects[cylinder.uuid] = cylinder;
-                    }
-               }
-               console.log("objects size: "+ objects.length);
-               console.log("edges: " + (objects.length - cubeMesh.geometry.vertices.length));
-               //add spheres to mesh, push to objects[], add to scene
-               //sphereMesh(cubeMesh, objects, scene); //Custom sphereMesh function
-	     },
-	     // called when loading is in progresses
-	     function ( xhr ) {
-		     console.log( ( xhr.loaded / xhr.total * 100 ) + '% loaded' );
-          },
-	     // called when loading has errors
-	     function ( error ) {
-		     console.log( 'An error happened' );
-	     }
-		);
-		
+		    if(window.location.href.includes('?')){
+				var filenamex = window.location.href.split("?");
+				window.location.href = filenamex[0] + "?" + filename;
+				//if(filenamex.length == 1){filenamex[1]='face.obj';}
+			} else{
+				window.location.href = window.location.href + "?" + filename;
+			}
 		});
      document.addEventListener( 'mousedown', onDocumentMouseDown );
      window.addEventListener( 'resize', onWindowResize, false );
