--- a/sourceFiles/index.html
+++ b/sourceFiles/index.html
@@ -1059,7 +1059,7 @@
      <div id="printinfo">Print</div>
      <div id="cmds">Commands</div>
      <input style="display:none;" type="file" id="objBrowseInput" />
-     <input style="display:none;" type="file" accept='text/plain' id="markerFileInput" />
+     <input style="display:none;" type="file" accept='.txt' id="markerFileInput" />
      <textarea id="markerText" hidden=true></textarea>
      <div class="leftPanel">
           <div id="log"></div>
